[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_left = 205.0
margin_top = 45.0
margin_right = 817.0
margin_bottom = 466.0

[node name="LineEdit" type="LineEdit" parent="Panel"]
margin_left = 10.0
margin_top = 388.0
margin_right = 597.0
margin_bottom = 412.0

[node name="TextEdit" type="TextEdit" parent="Panel"]
margin_left = 13.0
margin_top = 14.0
margin_right = 595.0
margin_bottom = 378.0
readonly = true
show_line_numbers = true

[node name="Host" type="Button" parent="."]
margin_left = 55.2482
margin_top = 504.6
margin_right = 157.248
margin_bottom = 533.6
text = "Host"

[node name="Leave" type="Button" parent="."]
margin_left = 367.094
margin_top = 546.343
margin_right = 469.094
margin_bottom = 575.343
text = "Leave"

[node name="Join" type="Button" parent="."]
margin_left = 55.2482
margin_top = 545.116
margin_right = 157.248
margin_bottom = 574.116
text = "Join"

[node name="IP" type="LineEdit" parent="."]
margin_left = 173.0
margin_top = 544.0
margin_right = 308.0
margin_bottom = 579.0
text = "127.0.0.1"
[connection signal="pressed" from="Host" to="." method="Host_room"]
[connection signal="pressed" from="Leave" to="." method="Leave_room"]
[connection signal="pressed" from="Join" to="." method="join_room"]
